Fixing h1..h6 alignments

--- a/src/cdn/helpers/typography.css
+++ b/src/cdn/helpers/typography.css
@@ -15,6 +15,8 @@ h5,
 h6 {
   font-weight: 400;
   margin: 0 0 8rem 0;
+  display: flex;
+  align-items: center;
 }
 
 *:not(.progress) + h1,
